tests/unit_tests/sema/binder_unknown_base_class_01.cc
// RUN: %cxx -verify -fcheck %s

struct D : MissingBase {};  // expected-error {{unknown base class 'MissingBase'}}
